--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.6",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
