--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-tooltip": "^5.25.1",
     "sass": "^1.69.6",
     "socket.io-client": "^4.7.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
