Features: drag and drop & re-arrange [Test Changes for KanbanBoard Client Changes]

--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.69.6",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
