--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,30 +1,31 @@
-user  nginx;
-worker_processes  auto;
-# Hello from KKA
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
 
-events {
-    worker_connections  1024;
-}
+    location /auth {
+        proxy_pass http://auth_service:5001;
+    }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location /checklist {
+        proxy_pass http://checklist_service:5002;
+    }
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    location /kanbanboard {
+        proxy_pass http://kanbanboard_service:5003;
+    }
 
-    access_log  /var/log/nginx/access.log  main;
+    location /pomodoro {
+        proxy_pass http://pomodoro_service:5004;
+    }
 
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 }
