--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -41,10 +41,8 @@ services:
       - "4001:27017"
 
   auth_service:
-    image: auth_service
-    build:
-      context: ./Services/auth
-      dockerfile: Dockerfile
+    container_name: auth_service
+    build: ./Services/auth/.
     restart: always
     ports:
     - "5001:5001"
@@ -53,6 +51,7 @@ services:
       - auth_mongo
     environment:
       DB_URI: mongodb://auth_mongo:27017
+      
 
   # Checklist Service and DB Configuration
   checklist_mongo:
@@ -62,10 +61,8 @@ services:
       - "4002:27017"
 
   checklist_service:
-    image: checklist_service
-    build:
-      context: ./Services/checklist
-      dockerfile: Dockerfile
+    container_name: checklist_service
+    build: ./Services/checklist/.
     restart: always
     ports:
     - "5002:5002"
@@ -83,10 +80,8 @@ services:
       - "4003:27017"
 
   kanbanboard_service:
-    image: kanbanboard_service
-    build:
-      context: ./Services/kanbanboard
-      dockerfile: Dockerfile
+    container_name: kanbanboard_service
+    build: ./Services/kanbanboard/.
     restart: always
     ports:
     - "5003:5003"
@@ -104,10 +99,8 @@ services:
       - "4004:27017"
 
   pomodoro_service:
-    image: pomodoro_service
-    build:
-      context: ./Services/pomodoro
-      dockerfile: Dockerfile
+    container_name: pomodoro_service
+    build: ./Services/pomodoro/.
     restart: always
     ports:
     - "5004:5004"
@@ -119,10 +112,8 @@ services:
 
   # Notify Service Configuration
   notify_service:
-    image: notify_service
-    build:
-      context: ./Services/notification
-      dockerfile: Dockerfile
+    container_name: notify_service
+    build: ./Services/notification/.
     restart: always
     ports:
     - "5005:5005"
@@ -142,4 +133,10 @@ services:
       - "8080:80"
       - "443:443"
     volumes:
-      - ./Nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./Nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - auth_service
+      - checklist_service
+      - kanbanboard_service
+      - pomodoro_service
+    
