Feature: Nginx Config for Services

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -8,19 +8,28 @@ server {
         index  index.html index.htm;
     }
 
-    location /auth {
+    # Auth Service
+    location ^~ /auth/ {
+        rewrite ^/auth/(.*)$ /$1 break;
         proxy_pass http://auth_service:5001;
     }
 
-    location /checklist {
+    # Checklist Service
+    location ^~ /checklist/ {
+        rewrite ^/checklist/(.*)$ /$1 break;
         proxy_pass http://checklist_service:5002;
     }
 
-    location /kanbanboard {
+    # KanbanBoard Service
+    location ^~ /kanbanboard/ {
+        rewrite ^/kanbanboard/(.*)$ /$1 break;
         proxy_pass http://kanbanboard_service:5003;
     }
 
-    location /pomodoro {
+
+    # Pomodoro Service
+    location ^~ /pomodoro/ {
+        rewrite ^/pomodoro/(.*)$ /$1 break;
         proxy_pass http://pomodoro_service:5004;
     }
 
