--- a/Client/public/manifest.json
+++ b/Client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TimeShaasan",
+  "name": "TimeShaasan",
   "icons": [
     {
       "src": "favicon.ico",
