--- a/Services/notification/package.json
+++ b/Services/notification/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.1",
+    "pug": "^3.0.2",
     "socket.io": "^4.7.3"
   }
 }
