Code Refactor for Micro in env example

--- a/Client/example.env
+++ b/Client/example.env
@@ -44,3 +44,49 @@ REACT_APP_UPDATE_STATUS_Checklist="/api/checklist/"
 
 # Checklist - EDIT Checklist Task
 REACT_APP_UPDATE_EDIT_Checklist="/api/checklist/edit/"
+
+
+
+# MonoServices
+
+# Auth - Generate Token API
+REACT_APP_TOKEN="auth/api/v1/token"
+
+# Auth - ADD User API
+REACT_APP_ADD_USER="auth/api/v1/user"
+
+# Pomodoro - Get Pomodoro
+REACT_APP_GET_FOCUS="pomodoro/api/v1/"
+
+# Pomodoro - Update Pomodoro
+REACT_APP_UPDATE_FOCUS="pomodoro/api/v1"
+
+# Kanban Board - Move Task
+REACT_APP_Move_Task="kanbanboard/api/v1/todo/move/"
+
+# Kanban Board- Add Task
+REACT_APP_ADD_TASK="kanbanboard/api/v1/todo/"
+
+# Kanban Board- Remove Task
+REACT_APP_REMOVE_TASK="kanbanboard/api/v1/todo/"
+
+# Kanban Board- Edit Task
+REACT_APP_EDIT_TASK="kanbanboard/api/v1/todo/edit/"
+
+# Kanban Board - Get Task
+REACT_APP_GET_Task="kanbanboard/api/v1/todo/"
+
+# Checklist - Get Checklist Task
+REACT_APP_GET_Checklist="checklist/api/v1/"
+
+# Checklist - Add Checklist Task
+REACT_APP_ADD_Checklist="checklist/api/v1/"
+
+# Checklist - Remove Checklist Task
+REACT_APP_REMOVE_Checklist="checklist/api/v1/"
+
+# Checklist - Update Status Checklist Task
+REACT_APP_UPDATE_STATUS_Checklist="checklist/api/v1/"
+
+# Checklist - EDIT Checklist Task
+REACT_APP_UPDATE_EDIT_Checklist="checklist/api/v1/edit/"
