--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.3"
   }
 }
