--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --WatchAll",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -20,6 +20,12 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "redis": "^4.6.13",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "supertest": "^6.3.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5"
   }
 }
