--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.3",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -25,8 +26,8 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.25.1",
     "sass": "^1.69.6",
-    "styled-components": "^6.1.8",
     "socket.io-client": "^4.7.3",
+    "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
