Settings Service and Minor Changes

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -33,6 +33,12 @@ server {
         proxy_pass http://pomodoro_service:5004;
     }
 
+    # Settings Service
+    location ^~ /settings/ {
+        rewrite ^/settings/(.*)$ /$1 break;
+        proxy_pass http://settings_service:5006;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
