--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.9",
     "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.0.0",
     "react-dom": "^18.2.0",
