--- a/Services/auth/Dockerfile
+++ b/Services/auth/Dockerfile
@@ -1,13 +1,19 @@
-FROM node:20-alpine
+# Stage 1: Build
+FROM node:20-alpine AS build
 
-WORKDIR auth/
+WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm i
+RUN apk add curl && npm ci
 
 COPY . .
+
+# Set a non-root user
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
 
 EXPOSE 5001
 
 CMD ["node", "auth.service.js"]
+
