--- a/Services/auth/package.json
+++ b/Services/auth/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.3"
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.7.3",
+    "winston": "^3.15.0"
   }
 }
