--- a/Services/checklist/package.json
+++ b/Services/checklist/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "prom-client": "^15.1.3",
     "socket.io": "^4.7.3",
-    "kafkajs": "^2.2.4"
+    "winston": "^3.15.0"
   }
 }
