--- a/Services/notification/package.json
+++ b/Services/notification/package.json
@@ -21,7 +21,9 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.1",
+    "prom-client": "^15.1.3",
     "pug": "^3.0.2",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "winston": "^3.15.0"
   }
 }
