--- a/Services/auth/package.json
+++ b/Services/auth/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
